--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -5,12 +5,13 @@ services:
     image: nginx:alpine
     container_name: proxy
     ports:
-      - '80:80'
+      - '8080:80'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     restart: 'unless-stopped'
     networks:
       - backend
+
   server:
     build:
       context: ./
@@ -18,22 +19,39 @@ services:
       dockerfile: Dockerfile
     container_name: server
     ports:
-      - '3000:3000'
+     - 3080:3080
     volumes:
       - ./:/app
       - /app/node_modules
+    env_file:
+      - .env.development.local
     restart: 'unless-stopped'
     networks:
       - backend
     links:
       - mongo
+      - redis
     depends_on:
       - mongo
+      - redis
   mongo:
     image: mvertes/alpine-mongo
+    volumes:
+      - ./mongodata:/data/db
     container_name: mongo
     ports:
       - '27017:27017'
+    networks:
+      - backend
+
+  redis:
+    image: 'bitnami/redis:latest'
+    container_name: redis
+    ports:
+      - 6379:6379
+    environment:
+      - REDIS_AOF_ENABLED=no
+      - ALLOW_EMPTY_PASSWORD=yes
     networks:
       - backend
 
@@ -42,5 +60,5 @@ networks:
     driver: bridge
 
 volumes:
-  data:
+  mongodata:
     driver: local
