--- a/front/package.json
+++ b/front/package.json
@@ -13,43 +13,55 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^1.0.0",
+    "css-loader": "^6.8.1",
+    "dayjs": "^1.11.10",
+    "expo-linear-gradient": "^12.5.0",
+    "formik": "^2.4.5",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "native-base": "^3.4.28",
+    "normalize-css-color": "^1.0.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
-    "react-native": "0.65.1",
+    "react-native": "^0.73.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "3.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-web": "^0.17.1",
     "react-redux": "^8.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.7.4",
-    "web-vitals": "^0.2.4"
+    "url-loader": "^4.1.1",
+    "web-vitals": "^0.2.4",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/plugin-syntax-jsx": "^7.23.3",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.2.17",
     "@types/react-native": "^0.69.3",
+    "file-loader": "^6.2.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "0.0.7",
     "react-test-renderer": "17.0.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ]
 }
